--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,18 @@ body {
     color: white;
     background: black;
     margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(255, 255, 255);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(255, 255, 255);
 }
 
 section {
-    background: rgb(184,156,213);
+    background: rgb(38, 8, 70);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -31,6 +32,36 @@ body {
 }
 
 h1 { 
+
     font-size: 40px;
+}
+
+p {
+  font-size: 20px;
+
+}
+
+img {
+    height: 200px;
+}
+
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 50px;
+}
+
+section {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.chamada {
+    background: rgb(100,156,213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
 }
 
